--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Body Condition Test</string>
-    <string name="diagnose_value_string">"Your BMI index is "</string>
-    <string name="set_diagnose_string">"Diagnose is "</string>
+    <string name="diagnose_value_string_lg">"Your BMI index is "</string>
+    <string name="set_diagnose_string_lg">"Diagnose is "</string>
     <string name="profile_string">Profile</string>
     <string name="full_name_string">"Your name: "</string>
     <string name="name_string">Name</string>
@@ -16,12 +16,12 @@
     <string name="man_string">Man</string>
     <string name="woman_string">Woman</string>
     <string name="mistakes_string">"Wrong things in your body: "</string>
-    <string name="body_condition_string">Your body condition is:</string>
-    <string name="front_part_string">Front part</string>
-    <string name="tests_string">Tests</string>
-    <string name="news_string">News</string>
-    <string name="warning_string">Warning</string>
-    <string name="main_page_string">Main Page</string>
     <string name="first_aid_string">First Aid</string>
+    <string name="main_page_string">Main Page</string>
+    <string name="warning_string">Warning</string>
+    <string name="news_string">News</string>
+    <string name="tests_string">Tests</string>
+    <string name="front_part_string">Front part</string>
+    <string name="body_condition_string">"Your body contition is "</string>
 
 </resources>
